force-app/main/default/objects/citizenship__c/citizenship__c.object-meta.xml
<CustomObject>
    <label>citizenship</label>
    <nameField>
        <displayFormat>CID-{0}</displayFormat>
        <label>citizenship ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>citizenships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>