force-app/main/default/objects/citizenship__c/fields/Basis__c.field-meta.xml
<CustomField>
    <fullName>Basis__c</fullName>
    <label>Basis</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>By Birth</fullName>
            </value>
            <value>
                <fullName>By Asset</fullName>
            </value>
            <value>
                <fullName>By Work&apos;</fullName>
            </value>
            <value>
                <fullName>By Marriage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>